[package]
name = "binomial_tree"
version = "0.4.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
homepage = "https://github.com/phillyfan1138/binomial_tree_rust"
repository = "https://github.com/phillyfan1138/binomial_tree_rust"
readme = "README.md"
license = "MIT"
description = "A generic binomial pricing tree for options"
edition = "2018"
[dependencies]

[dev-dependencies]
black_scholes = "0.2.3"
approx = "0.2.0"
bencher = "0.1.5"

[[bench]]
name = "bench"
harness = false